<resources>
    <string name="app_name">Logueo_Daniel</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="registrar">Registrarse</string>
    <string name="email">Email</string>
    <string name="confirmarcontra">Confirmar Contraseña</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="ajustes">Ajustes</string>
    <string name="saludo">Hola</string>
    <string name="dias">Bienvenido</string>
    <string name="restablecer">Restablecer Contraseña</string>
    <string name="actualizarnom">Actualizar Nombre Usuario</string>
    <string name="actualizarnac">Actualizar Nacionalidad</string>
    <string name="actualizaredad">Actualizar Edad</string>
    <string name="borrarusu">Borrar Usuario</string>
    <string name="registro">Registro</string>
    <string name="msg_restablecerclave">Se le ha enviado un correo para restablecer su clave</string>
    <string name="msg_borrarusu">Se ha borrado el usuario con éxito</string>
    <string name="msg_actualizarUser">Nombre actualizaddo con éxito</string>
    <string name="actualizarNacio">Nacionalidad actualizada con éxito</string>
    <string name="actualizarEdad">Edad actualizada con éxito</string>
    <string name="restablecerContra">Pulse Ok para enviar un email y restablecer la contraseña</string>
    <string name="borrarUsuarioTexto">Se va a borrar su usuario. ¿Desea continuar?</string>
    <string name="noigualcontra">Las contraseñas no coinciden</string>
    <string name="emailvacio">Debe rellenar el campo del email</string>
    <string name="falloemail">Introduzca un email válido</string>
    <string name="ejemploemail">ejemplo@gmail.com</string>
    <string name="contravacia">Debe rellenar el campo de contraseña</string>
    <string name="fallocontra">Introduzca una contraseña valida</string>
    <string name="ejemplocontra">El patron de contraseña es: minimo 6 caracteres incluyendo un numero del 0-9, 1 mayúscula y 1 minúsucla</string>
    <string name="about">Aplicación Desarrollada Por:</string>
    <string name="acerca">Acerca De</string>
    <string name="error">Error: No hay ningún usuario con ese con dichos datos. El usuario puede haber sido eliminado o no existir.</string>
</resources>